--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h3> I'm in the AppComponent!</h3>
+<h1>Homework 2 - Cooking option</h1>
 <hr>
-<app-server></app-server>
+<!--<app-test-component></app-test-component>-->
+<app-homework2></app-homework2>
 <!--<div app-server> </div>-->
